--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    background-color: #9bbbf7;
+    background-color: #ccffcce0;
     padding-top: 50px;
 }
 
@@ -33,26 +33,26 @@ header h1{
 
 form{
     display: flex;
-    max-width: 640px;
+    max-width: 500px;
     width: 100%;
-    justify-content: space-between;
-    margin-bottom: 56px;
+    justify-content:first baseline;
+    margin-bottom: 40px;
 }
 
 form input{
     font-size: 24px;
     background-color: white;
     border: 2px solid #000000;
-    border-bottom: 2px solid #000;
-    padding: 8px;
+    border-bottom: 3px solid #000;
+    padding: 18px;
 }
 
 form button {
+    align-items:flex-start;
     background-color: #1c03ff;
     color: white;
     font-size: 24px;
-    font-weight: bold;
-    border: none;
+    font-weight: lighter;
     cursor: pointer;
     padding: 8px;
     transition: background-color 0.3s ease;
@@ -66,21 +66,21 @@ table {
     width: 100%;
 }
 
-table th{
+table ul{
     border-bottom: 2px solid #000000;
     padding: 16px;
     font-size: 24px;
     font-weight: bold;
 }
 
-table td{
+table li{
     padding: 16px 0;
     text-align: center;
     font-size: 18px;
     border-bottom: 1px solid rgba(0, 0, 0, 0.1);
 }
 
-table td img{
+table li img{
     height: 30px;
 }
 
@@ -105,12 +105,23 @@ table td img{
         font-size: 16px;
     }
 
-    table th,
-    table td {
+    table ul,
+    table li {
         font-size: 14px;
     }
 
-    table td img {
+    table li img {
         height: 16px;
     }
+}
+
+.riscado{
+    text-decoration: line-through;
+}
+
+#botaoRiscado {
+    border-bottom: 2px solid #000000;
+    padding: 16px;
+    font-size: 24px;
+    font-weight: bold;
 }
